# metrixd

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  METRICS_GUIDE.md  README.md  setup-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: collector.rs  main.rs
src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  system.rs
