[package]
name = "metrixd"
version = "0.1.0"
edition = "2021"


[dependencies]
# Tokio runtime for async
tokio = { version = "1", features = ["full"] }

# Prometheus Rust client
prometheus = "0.14"

# Hyper HTTP server
hyper = { version = "0.14", features = ["full"] }

# System information for real metrics data
sysinfo = "0.30"

# For logging (optional but recommended)
log = "0.4"
env_logger = "0.9"
rand = "0.9.2"
